--- a/src/css/Banner.css
+++ b/src/css/Banner.css
@@ -86,8 +86,12 @@
   }
   
 
-  
-  @media screen and (max-width: 567px) {
+  @media screen and (min-width: 400px) and (max-width: 567px) {
+
+    .group15{
+        width: 350px;
+        
+    }
     .group4-Icon{
         width: 50px;
         height: 50px;
@@ -102,4 +106,24 @@
         }  
 
   }
-  
+
+  @media screen and (max-width: 399px) {
+    
+    .group15{
+        width: 250px;
+     
+    }
+    
+    .group4-Icon{
+        width: 30px;
+        height: 30px;
+        }
+
+    .text1{
+        font-size: 24px;
+        }
+
+    .text17{         
+        font-size: 25px;
+        }  
+  }
