--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -140,3 +140,43 @@ button {
 
 
   
+@media screen and (min-width: 568px) and (max-width: 767px) {
+
+  .responsive-container {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1440px; 
+    font-family: 'Your-Font-Here', sans-serif; 
+    width: 100%;
+  }
+} 
+
+/* Mobile Devices */
+@media screen and (min-width: 300px) and (max-width: 567px) {
+
+  .responsive-container {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1440px; 
+    font-family: 'Your-Font-Here', sans-serif; 
+    width: 100%;
+  }
+} 
+
+
+@media screen and (max-width: 299px) {
+
+  .responsive-container {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1440px; 
+    font-family: 'Your-Font-Here', sans-serif; 
+    width: 100%;
+  }
+} 
