--- a/src/css/SearchInput.css
+++ b/src/css/SearchInput.css
@@ -135,16 +135,16 @@ text-indent: 16px;
 
 
 
+@media screen and (min-width: 400px) and (max-width: 567px) {
 
 
-@media screen and (max-width: 567px) {
   .SearchContainer {
-    width: 400px;
+    width: 350px;
  
   }
   
   .SearchContainer_dark{
-    width: 400px;
+    width: 350px;
   
   }
 
@@ -156,8 +156,33 @@ text-indent: 14px;
 
 .search-button {
   position: relative;
-  left: 190px;
-  top: -25px;
+  left: 160px;
+  top: -30px;
 }
 
+}
+
+
+@media screen and (max-width: 399px) {
+  .SearchContainer {
+    width: 250px;
+ 
+  }
+  
+  .SearchContainer_dark{
+    width: 250px;
+  
+  }
+
+  input::placeholder {
+font-size: 14px;
+font-weight: 500;
+text-indent: 14px;
+  }
+
+.search-button {
+  position: relative;
+  left: 115px;
+  top: -30px;
+}
 }
